[package]
name = "mrusty"
description = "mruby safe bindings for Rust. Define and run Ruby without dependencies."
version = "1.0.0"
authors = ["Dragoș Tiselice <dragostiselice@gmail.com>", "Robert Krody <krody.robi@gmail.com>"]
build = "build.rs"
exclude = ["src/mruby/get_mruby.sh"]
repository = "https://github.com/anima-engine/mrusty"
documentation = "http://anima-engine.github.io/mrusty/"
keywords = ["mruby", "ruby", "bindings", "repl"]
license = "MPL-2.0"

[build-dependencies]
gcc = "0.3.22"
tar = "0.4.4"
walkdir = "0.1.5"

[features]
gnu-readline = ["rl-sys"]

[dependencies]
rl-sys = { version = "0.4.1", optional = true }
